# esp-camera-rs

./: .gitignore  Cargo.toml  README.md  plan.md
examples/camera-example/: Cargo.toml  README.md  sdkconfig.defaults
examples/camera-example/.cargo/: config.toml
examples/camera-example/src/: main.rs
examples/image_receiver/: Cargo.toml
examples/image_receiver/.cargo/: config.toml
examples/image_receiver/src/: main.rs
examples/image_sender/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml.template  sdkconfig.defaults.test
examples/image_sender/.cargo/: config.toml
examples/image_sender/src/: config.rs  lib.rs  mac_address.rs  main.rs
examples/image_sender/src/camera/: controller.rs  mod.rs
examples/image_sender/src/esp_now/: frame.rs  mod.rs  sender.rs
examples/image_sender/src/led/: mod.rs  status_led.rs
examples/image_sender/src/sleep/: deep_sleep.rs  mod.rs
examples/image_viewer/: .gitignore  justfile  main.py  pyproject.toml
examples/image_viewer/templates/: index.html
examples/python_server/: .gitignore  README.md  app.py  justfile  pyproject.toml  receive_image.py
examples/python_server/systemd/: README.md  README_JA.md  python_server.service
examples/simple_webserver_cam/: Cargo.toml  partitions.csv  sdkconfig.defaults
examples/simple_webserver_cam/src/: main.rs
examples/usb_cdc_receiver/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml.example
examples/usb_cdc_receiver/.cargo/: config.toml
examples/usb_cdc_receiver/src/: config.rs  lib.rs  mac_address.rs  main.rs
examples/usb_cdc_receiver/src/esp_now/: frame.rs  mod.rs  receiver.rs
examples/usb_cdc_receiver/src/queue/: data_queue.rs  mod.rs
examples/usb_cdc_receiver/src/usb/: cdc.rs  mod.rs
src/: lib.rs
