[package]
name = "camera-example"
version = "0.1.0"
authors = ["Mikhail Modin <mikhailm1@gmail.com", "Mathias Pius <contact@pius.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
esp-idf-svc = { version = "0.49.1", default-features = false, features = [
    "binstart",
    "std",
] }
esp-idf-sys = "0.35"
embedded-svc = "0.28"

esp-camera-rs = { git = "https://github.com/mikhail-m1/esp-camera-rs.git" }
# Uncomment next string to use local version of the lib.
# You also need to run `git submodule init` and `git submodule update`
#esp-camera-rs = { path = "../../" }

[build-dependencies]
embuild = "0.32"
