[package]
name = "image-receiver" # パッケージ名を変更
version = "0.1.0"
authors = ["Roo <roo@example.com>"] # 作者情報を変更
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
esp-idf-svc = { version = "0.49.1", default-features = false, features = ["binstart", "std"] } # esp_now featureは不要
esp-idf-sys = "0.35" # features = ["esp_now"] は不要 (esp_now関数はデフォルトで利用可能)
embedded-svc = "0.28" # Wi-Fi初期化に必要

# esp-camera-rs は不要なので削除

[build-dependencies]
embuild = "0.32"