[package]
name = "image-receiver" # パッケージ名を変更
version = "0.1.0"
authors = ["Roo <roo@example.com>"] # 作者情報を変更
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
# esp-idf-svc のみに依存し、他は推移的に依存させる
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", tag = "v0.51.0", default-features = false, features = ["binstart", "std"] } # 最新バージョンに戻す
esp-idf-svc = { version = "0.49.1", default-features = false, features = ["binstart", "std"] }
embedded-svc = "0.28"
sha2 = "0.10" # Add sha2 for hashing
hex = "0.4" # Add hex for hash string conversion

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] } # espidf feature を追加