[package]
name = "image_receiver"
version = "0.2.0"
authors = ["junkei <example@example.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = { version = "0.45" }
esp-idf-svc = { version = "0.51", features = ["experimental", "alloc", "wifi"] }
embedded-svc = "0.28.1"
log = "0.4"
anyhow = "1"
heapless = "=0.8.0"
sha2 = "0.10"
esp-mqtt = "1.1"
embedded-time = "0.12"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[package.metadata.espflash]
partition_table = "../partitions.csv"