[project]
name = "image-reciver-from-uart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.48.0",
    "pillow>=11.2.1",
    "pyserial>=3.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "just-bin>=1.40.0",
]
