[package]
name = "usb_cdc_receiver"
version = "0.2.0"
authors = ["junkei-okinawa"]
edition = "2021"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "usb_cdc_receiver"
path = "src/main.rs"

[lib]
name = "usb_cdc_receiver"
path = "src/lib.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
esp-idf-svc = { version = "0.51", default-features = false, features = ["binstart", "std", "experimental", "alloc"] } # Removed wifi feature
embedded-svc = "0.28"
sha2 = "0.10"
hex = "0.4"
esp-idf-hal = { version = "0.45" }
heapless = "=0.8.0"
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
toml-cfg = "=0.2"

[build-dependencies]
embuild = "0.33"
toml-cfg = "=0.2"

[package.metadata.espflash]
partition_table = "../partitions.csv"